--- a/invest.html
+++ b/invest.html
@@ -29,6 +29,7 @@
     <script src="sweetalert2%4011"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core></script>
     <div class="elfsight-app-2da0ee78-823c-49a9-8944-6247c16cff19"></div>
+    <script src="//code.tidio.co/0do7qgkdtrbns4cdhsbd2wbyxmw8ghve.js" async></script>
     <script src="https://checkout.flutterwave.com/v3.js"></script>
 </head>
 
