--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     }
     
 </script>
+	<script src="https://code.tidio.co/0do7qgkdtrbns4cdhsbd2wbyxmw8ghve.js" async></script>
 </head>
 
 <body id="kt_body" data-bs-spy="scroll" data-bs-target="#kt_landing_menu" data-bs-offset="200" class="bg-white position-relative">
