--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="stylesheet" href="css/css.css">
     <link href="css/plugins.bundle.css" rel="stylesheet" type="text/css">
     <link href="css/style.bundle.css" rel="stylesheet" type="text/css">
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core></script>
-    <div class="elfsight-app-2da0ee78-823c-49a9-8944-6247c16cff19"></div>
 <script>
        window.onhashchange=function(){jp();};
     function hh1() {history.pushState(history.length+1, "message", "#"+new Date().getTime());}
@@ -38,7 +36,7 @@
     }
     
 </script>
-	<script src="https://code.tidio.co/0do7qgkdtrbns4cdhsbd2wbyxmw8ghve.js" async></script>
+<script src="//code.tidio.co/hohjakmoi7mhv1wdgf4qycwv8wcisr7y.js" async></script>
 </head>
 
 <body id="kt_body" data-bs-spy="scroll" data-bs-target="#kt_landing_menu" data-bs-offset="200" class="bg-white position-relative">
