--- a/dash.html
+++ b/dash.html
@@ -27,8 +27,19 @@
     <link rel="stylesheet" href="css/css2.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="sweetalert2%4011"></script>
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core></script>
-    <div class="elfsight-app-2da0ee78-823c-49a9-8944-6247c16cff19"></div>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/661421bc1ec1082f04e021ed/1hqva7j5s';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </head>
 
 <body class="bg-white-dark relative min-h-screen">
